tela "boa" ta no index2

--- a/screens-cardapp/TelaInicial/style.css
+++ b/screens-cardapp/TelaInicial/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-image: url(../imagens/telaInicial.png);
+  background-image: url(../imagens/fundolimpo.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
