--- a/screens-cardapp/TelaInicial/style.css
+++ b/screens-cardapp/TelaInicial/style.css
@@ -1,56 +1,41 @@
-body {
-  margin: 0;
-  background-image: url(../imagens/fundolimpo.png);
-  background-repeat: no-repeat;
-  background-size: cover;
+.maiorDiv{
+    display: flex;
 }
 
-.texto1 {
-  display: flex;
-  width: 613px;
-  height: 247px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
-  color: #290101;
-  font-family: Inter;
-  font-size: 55px;
-  font-style: normal;
-  font-weight: 900;
-  line-height: 69px; /* 125.455% */
+.col1{
+    background-color: aliceblue;
+    width: 1440px;
+    height: 1024px;
+    flex-shrink: 0;
 }
 
-.texto2 {
-  display: flex;
-  width: 1090px;
-  height: 51px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
 
-  color: #273060;
-  text-align: center;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: #273060;
-  font-family: Jaldi;
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 45px; /* 180% */
+.col2{
+    background-color: #273060;
+    width: 580.72px;
+    height: 1024px;
+    flex-shrink: 0;
+    text-align: center;
 }
 
-.cadastrese {
-  display: flex;
-  width: 120px;
-  height: 53px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
-  color: #290101;
-  text-align: center;
-  font-family: Inter;
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: normal;
+/*p: INÍCIO*/
+.p1{
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: Arial;
+    margin-top: 268px;
+}
+
+button{
+    color:#273060;
+    background-color: white;
+    width: 240.069px;
+    height: 58.056px;
+    border: none;
+    border-radius: 27px;
+    font-weight: bold;
+    font-size: 18px;
+    margin-top: 227px;
+    margin-left: 8px;
 }
