--- a/screens-cardapp/TelaHomePage/style.css
+++ b/screens-cardapp/TelaHomePage/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 .logo {
   background-color: #273060;
@@ -13,7 +14,7 @@
 * {
   margin: 0px;
   padding: 0px;
-  font-family: Julius Sans One;
+  font-family: Julius Sans One, Roboto;
   color: #273060;
 }
 
@@ -108,4 +109,48 @@ body {
 
 .sidebar-content {
   padding: 30px 20px;
+}
+
+/*MAIN*/
+main {
+  text-align: center;
+}
+
+.nome-do-restaurante{
+  background-color: #273060;
+  color: white;
+  font-size: 55px;
+  font-weight: 700;
+  font-family: Roboto;
+  display: inline-block;
+  margin-top: 68px;
+  margin-bottom: none;
+  padding: 10px 30px;
+}
+
+.container{
+  position: relative;
+  text-align: center;
+}
+
+/*.CENTERED É REMOVÍVEL
+
+texto: IMAGEM DO RESTAURANTE
+*/
+.centered{
+  position: absolute;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.imagem-do-restaurante{
+  object-fit: cover;
+  margin-left: 50px;
+  border: 5px solid #273060;
+  width: 963.156px;
+  height: 448.821px;
+  flex-shrink: 0;
 }
