--- a/screens-cardapp/TelaHomePage/style.css
+++ b/screens-cardapp/TelaHomePage/style.css
@@ -24,12 +24,34 @@
 
 body {
   min-height: 100vh;
+  padding-bottom: 5px;
 }
 
 .navbar {
   text-align: center;
  /* background-color: blueviolet; */
  box-shadow: 1px 0px 10px 1px rgba(0,0,0,0.2);
+}
+
+.new-navbar{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #D2D2D2;
+}
+
+.new-navbar a {
+  text-decoration: none;
+  font-size: 30px;
+  background-color: #D2D2D2;
+  border-radius: 30px;
+  padding: 10px 100px;
+  transition: opacity 0.15s, box-shadow 0.15s;
+}
+
+.new-navbar a:hover{
+  opacity: 0.5;
+  box-shadow: 1px 0px 10px 1px rgba(0,0,0,0.2);
 }
 
 .navbar ul {
@@ -153,4 +175,35 @@ texto: IMAGEM DO RESTAURANTE
   width: 963.156px;
   height: 448.821px;
   flex-shrink: 0;
+}
+
+.container-localizacao{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 68px;
+}
+
+.texto-acima-localizacao{
+  font-size: 50px;
+  background-color: #273060;
+  color: white;
+  font-weight: bold;
+  padding: 5px;
+  width: 637px;
+  height: 51px;
+}
+.localizacao{
+  display: flex;
+  flex-direction: column;
+  border: 5px solid #273060;
+  width: 963px;
+  height: 100px;
+  justify-content: center;
+}
+
+.localizacao p{
+  color: #273060;
+  font-size: 48px;
+  font-weight: 700;
 }
