--- a/screens-cardapp/TelaHomePage/style.css
+++ b/screens-cardapp/TelaHomePage/style.css
@@ -36,22 +36,23 @@ body {
 .new-navbar{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  background-color: #D2D2D2;
+  justify-content: space-around;
+  background-color: white;
+  box-shadow: 2px 0px 10px 1px rgba(0,0,0,0.2);
+  padding: 15px 0px;
 }
 
 .new-navbar a {
   text-decoration: none;
   font-size: 30px;
-  background-color: #D2D2D2;
   border-radius: 30px;
-  padding: 10px 100px;
+  padding: 10px 10px;
   transition: opacity 0.15s, box-shadow 0.15s;
 }
 
 .new-navbar a:hover{
-  opacity: 0.5;
-  box-shadow: 1px 0px 10px 1px rgba(0,0,0,0.2);
+  opacity: 0.7;
+  box-shadow: 1px 0px 20px 5px rgba(0,0,0,0.2);
 }
 
 .navbar ul {
@@ -144,37 +145,32 @@ main {
   font-size: 55px;
   font-weight: 700;
   font-family: Roboto;
-  display: inline-block;
-  margin-top: 68px;
+  margin-top: 40px;
   margin-bottom: none;
   padding: 10px 30px;
 }
 
 .container{
-  position: relative;
-  text-align: center;
+  background-image: url(../imagens/imagem-placeholder.png);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  width: 100%;
+  height: 1000px;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-/*.CENTERED É REMOVÍVEL
-
-texto: IMAGEM DO RESTAURANTE
-*/
-.centered{
-  position: absolute;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
-
-.imagem-do-restaurante{
-  object-fit: cover;
-  margin-left: 50px;
-  border: 5px solid #273060;
-  width: 963.156px;
-  height: 448.821px;
-  flex-shrink: 0;
+.container-info{
+  background: rgba(242, 241, 213, 0.25);
+  backdrop-filter: blur(7.5px);
+  padding: 50px 50px;
+  border-radius: 10px;
+  text-align: left;
+  font-weight: 700;
 }
 
 .container-localizacao{
