--- a/screens-cardapp/TelaHomePage/style.css
+++ b/screens-cardapp/TelaHomePage/style.css
@@ -1,60 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-.logo {
-  background-color: #273060;
-}
-
-.divLogo {
-  text-align: center;
-  background: #273060;
-  padding: 10px 0px;
-}
-
-* {
-  margin: 0px;
-  padding: 0px;
-  font-family: Julius Sans One, Roboto;
-  color: #273060;
-}
-
-*:active{
-  cursor: default;
-}
-
-body {
-  min-height: 100vh;
-  padding-bottom: 5px;
-}
-
-.navbar {
-  text-align: center;
- /* background-color: blueviolet; */
- box-shadow: 1px 0px 10px 1px rgba(0,0,0,0.2);
-}
-
-.new-navbar{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  background-color: white;
-  box-shadow: 2px 0px 10px 1px rgba(0,0,0,0.2);
-  padding: 15px 0px;
-}
-
-.new-navbar a {
-  text-decoration: none;
-  font-size: 30px;
-  border-radius: 30px;
-  padding: 10px 10px;
-  transition: opacity 0.15s, box-shadow 0.15s;
-}
-
-.new-navbar a:hover{
-  opacity: 0.7;
-  box-shadow: 1px 0px 20px 5px rgba(0,0,0,0.2);
-}
-
 .navbar ul {
   list-style-type: none;
   margin: 0;
@@ -89,7 +35,7 @@ body {
   opacity: 0.6;
 }
 
-/* Sidebar styles */
+
 .sidebar {
   position: fixed;
   top: 0;
@@ -134,45 +80,11 @@ body {
   padding: 30px 20px;
 }
 
+
+
 /*MAIN*/
-main {
-  text-align: center;
-}
 
-.nome-do-restaurante{
-  background-color: #273060;
-  color: white;
-  font-size: 55px;
-  font-weight: 700;
-  font-family: Roboto;
-  margin-top: 40px;
-  margin-bottom: none;
-  padding: 10px 30px;
-}
-
-.container{
-  background-image: url(../imagens/imagem-placeholder.png);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
-  width: 100%;
-  height: 1000px;
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.container-info{
-  background: rgba(242, 241, 213, 0.25);
-  backdrop-filter: blur(7.5px);
-  padding: 50px 50px;
-  border-radius: 10px;
-  text-align: left;
-  font-weight: 700;
-}
-
+/*
 .container-localizacao{
   display: flex;
   flex-direction: column;
@@ -203,3 +115,5 @@ main {
   font-size: 48px;
   font-weight: 700;
 }
+
+*/
