fazendo a tela pratos

--- a/cardapp-teste/src/styles/style_banner.css
+++ b/cardapp-teste/src/styles/style_banner.css
@@ -1,7 +1,7 @@
-main {
+/*main {
   text-align: center;
   background-color: white;
-}
+}*/
 
 .container {
   background-image: url(/imagens/imagem-placeholder.png);
