--- a/cardapp-teste/src/app/tela-inicial/style.css
+++ b/cardapp-teste/src/app/tela-inicial/style.css
@@ -1,67 +1,82 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 body {
   margin: 0px;
   padding: 0px;
+  background-color: white;
+  overflow-y: hidden;
 }
 
-#img-logotipo{
-  margin: 8px;
-}
-
-.maiorDiv {
+.div-body {
   display: flex;
   flex-direction: row;
 }
-
 .col1 {
-  background-color: rgb(252, 252, 252);
-  width: 1440px;
-  height: 1024px;
-  flex: 1
+  background-color: white;
+  width: 100px;
+  height: 50vw;
+  flex: 1;
+}
+
+.col1 div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20%;
 }
 
 .col2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: #273060;
-  width: 580.72px;
-  height: 1024px;
-  text-align: center;
-}
-p {
-  color: white;
-  font-weight: bold;
-  font-family: Arial;
+  flex: 0.56;
+  font-family: Inter;
 }
 
-/*p: INÍCIO*/
-.p1 {
-  font-size: 30px;
+.col2 h1 {
+  font-size: 36px;
+  font-weight: 800;
   margin-top: 268px;
+  margin-bottom: 227px;
 }
 
-/*p: Crie seu site*/
-#p2 {
-  font-size: 20px;
-  margin-top: 18.94px;
+.container-botoes {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  margin-bottom: 17px;
 }
 
-button {
-  color: #273060;
+.botao {
+  border: none;
+  font-family: Inter;
+  font-weight: 900;
   background-color: white;
+  color: #273060;
+  font-size: 18px;
   width: 240.069px;
   height: 58.056px;
-  border: none;
-  border-radius: 27px;
-  font-weight: bold;
-  font-size: 18px;
-  margin-top: 227px;
-  margin-left: 8px;
+  border-radius: 50px;
   cursor: pointer;
-  transition: opacity 0.15s;
+
+  transition: all 0.15s;
 }
 
-button:hover {
+.botao:hover{
   opacity: 0.7;
 }
 
-button:active {
-  opacity: 0.5;
+.p-abaixo {
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 800;
+}
+
+#img-logotipo {
+  margin: 8px;
+  position: fixed;
+}
+
+#img-grupo-comida {
 }
