--- a/cardapp-teste/src/app/HomePage/style_main.css
+++ b/cardapp-teste/src/app/HomePage/style_main.css
@@ -5,24 +5,26 @@ main {
 }
 
 .container {
-  background-image: url(/imagens/imagem-placeholder.png);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
-  min-width:100vw;
+  position: relative;
+  min-width: 100vw;
   height: 1000px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 50px;
-  margin-left: calc(-50vw + 50%);
-  box-sizing: border-box;
+  margin-bottom: 40px;
+}
+
+.container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .container-info {
+  position: absolute;
   background: rgba(242, 241, 213, 0.25);
-  backdrop-filter: blur(7.5px);
+  backdrop-filter: blur(15px);
   padding: 40px 50px;
   border-radius: 10px;
   text-align: center;
@@ -30,6 +32,14 @@ main {
 }
 
 .container-info h1 {
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 50px;
+  text-decoration: underline;
+}
+
+.container-info h2 {
+  font-size: 22px;
   font-weight: 700;
   margin: 20px 0px;
 }
