--- a/cardapp-teste/src/app/HomePage/style_pratos_sugeridos.css
+++ b/cardapp-teste/src/app/HomePage/style_pratos_sugeridos.css
@@ -14,6 +14,7 @@
   padding: 20px 30px;
   width: 1500px;
   box-shadow: 3px 3px 10px 1px rgba(0, 0, 0, 0.3);
+  margin-bottom: 10px;
 }
 
 .container-prato-sugerido {
@@ -23,20 +24,24 @@
   align-items: center;
 }
 .container-prato-sugerido p {
+  font-size: 18px;
   font-family: Roboto;
   font-weight: 500;
   width: 200px;
   word-break: break-word;
 }
 
-.prato-imagem {
-  background-image: url(/imagens/imagem-placeholder.png);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
+.prato-sugerido-imagem {
+  width: 200px;
+  height: 200px;
   border: 3px solid #273060;
   border-radius: 5px;
-  padding: 70px;
+}
+
+.prato-sugerido-imagem img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .texto-pratos-sugeridos {
