--- a/cardapp-teste/src/app/Pratos/styles/style_modal.css
+++ b/cardapp-teste/src/app/Pratos/styles/style_modal.css
@@ -79,7 +79,7 @@ input:focus {
   flex-direction: column;
   align-items: center;
   gap: 15px;
-  padding: 0px 10px 20px 10px;
+  padding: 0px 0px 20px 0px;
 }
 
 .container-modal p {
@@ -93,7 +93,8 @@ input:focus {
 .container-buttons {
   display: flex;
   flex-direction: row;
-  gap: 110px;
+  padding: 0px 20px;
+  gap: 60px;
 }
 
 .container-input {
