--- a/cardapp-teste/src/app/Cliente/Pratos/Prato/styles/style.css
+++ b/cardapp-teste/src/app/Cliente/Pratos/Prato/styles/style.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
-
 main {
   text-align: center;
   display: flex;
@@ -79,6 +78,27 @@ main {
 
 .edit-icon {
   width: 40px;
+}
+
+.botao-comanda {
+  padding: 5px 10px;
+  font-weight: 700;
+  font-size: 20px;
+  background-color: #273060;
+  color: white;
+  margin-top: 25px;
+  cursor: pointer;
+  transition: all 0.15s;
+  border-radius: 20px;
+  box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.3);
+}
+
+.botao-comanda:hover {
+  opacity: 0.7;
+}
+
+.botao-comanda img {
+  display: inline-block;
 }
 
 .container2 {
