--- a/cardapp-teste/src/app/Cliente/Pratos/styles/style_header.css
+++ b/cardapp-teste/src/app/Cliente/Pratos/styles/style_header.css
@@ -1,4 +1,3 @@
-
 .logo {
   background-color: #273060;
 }
@@ -8,21 +7,16 @@
   justify-content: center;
   align-items: center;
   background: #273060;
-  padding: 10px 0px;
-}
-
-.navbar {
-  text-align: center;
-  /* background-color: blueviolet; */
-  box-shadow: 1px 0px 10px 1px rgba(0, 0, 0, 0.2);
+  padding: 10px 0px 10px 0px;
 }
 
 .new-navbar {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  background-color: white;
   box-shadow: 2px 0px 10px 1px rgba(0, 0, 0, 0.2);
-  padding: 15px 0px;
+  padding: 15px 0px 15px 80px;
 }
 
 .new-navbar a {
