--- a/cardapp-teste/src/app/Perfil/styles/style_header.css
+++ b/cardapp-teste/src/app/Perfil/styles/style_header.css
@@ -1,4 +1,5 @@
 
+
 .logo {
   background-color: #273060;
 }
@@ -21,6 +22,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  background-color: white;
   box-shadow: 2px 0px 10px 1px rgba(0, 0, 0, 0.2);
   padding: 15px 0px;
 }
