--- a/cardapp-teste/src/app/Pratos/Prato/styles/style_modal.css
+++ b/cardapp-teste/src/app/Pratos/Prato/styles/style_modal.css
@@ -24,7 +24,7 @@ p1 {
   color: #727272;
 }
 
-input[type="file"]{
+input[type="file"] {
   display: none;
 }
 
@@ -98,12 +98,16 @@ input:focus {
 }
 
 .container-input {
+  font-family: Roboto;
+  font-weight: 900;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .container-input label {
+  font-family: Roboto;
+  font-weight: 900;
   width: 220px;
   word-break: break-word;
   font-weight: 700;
